[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.199", features = ["derive"] }
