[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.12.0"
itertools = "0.12.1"
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.199", features = ["derive"] }
