[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
rand = { version = "0.8.5", default-features = false, features = ["serde1"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.199", features = ["derive"] }
